# cs_classification_repo

./: .stestr.conf  Jenkinsfile  README.md  setup.cfg  tox.ini
cs_classification_repo/dataset/: make_dataset.py
cs_classification_repo/features/: build_features.py
cs_classification_repo/models/: deep_api.py
cs_classification_repo/tests/: test_unit_model.py
cs_classification_repo/visualization/: visualize.py
docs/: Makefile  conf.py  index.rst  make.bat
img_class/: api.py  img_class_api.py  model_utils.py  paths.py  test_utils.py  train_runfile.py  utils.py
notebooks/: 1.0-cs_classification_repo_start.ipynb
