# -*- coding: utf-8 -*-
[metadata]
name = cs_classification_repo
summary = This is CoreStack Classification Model, exposing the API's for flower classification
description-file =
    README.md
author = Hem Chandra Padhalni
author-email = hem.chandra@corestack.io
version = 0.0.1
license = No license file
home-page = https://github.com/shramanpadhalni-web/cs_classification_repo
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[files]
packages =
    cs_classification_repo

[entry_points]

deepaas.v2.model = 
    cs_classification_repo = cs_classification_repo.img_class.api

